host x3dom on github, x3dom.com does not provied ssl

--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
 
     <script src="lib/js/head.min.js"></script>
     <script src="js/reveal.js"></script>
-    <script src="http://x3dom.org/release/x3dom-full.js"></script>
+    <script src="js/x3dom-full.js"></script>
 
     <script>
 
