host x3dom example, cause not ssl..dang

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
           <section>
             <h2>3D Meteor</h2>
 
-            <iframe data-src="http://3d.meteor.com/#scene/eqsdtRNZFaTPesL5x" width="600" height="400" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:3px solid #666; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe>
+            <iframe data-src="https://3d.meteor.com/#scene/eqsdtRNZFaTPesL5x" width="600" height="400" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:3px solid #666; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe>
             <!-- <img data-src="images/3dmeteor.png" alt="Screenshot um sicher zu sein." /> -->
 
             <aside class="notes">
