--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
           <section>
             <h2>Gizmos</h2>
 
-            <iframe data-src="http://doc.x3dom.org/tutorials/animationInteraction/transformations/example.html" width="600" height="400"></iframe>
+            <iframe data-src="iframe/teapot.html" width="600" height="400"></iframe>
           </section>
         </section>
 
