--- a/iframe/teapot.html
+++ b/iframe/teapot.html
@@ -4,8 +4,8 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta http-equiv='Content-Type' content='text/html;charset=utf-8'></meta>
-    <script type='text/javascript' src='https://despairblue.github.io/reveal.js/js/x3dom-full.js'> </script>
-    <link rel='stylesheet' type='text/css' href='https://despairblue.github.io/reveal.js/css/x3dom.css'/>
+    <script type='text/javascript' src='../js/x3dom-full.js'> </script>
+    <link rel='stylesheet' type='text/css' href='../css/x3dom.css'/>
   </head>
 
   <style>
