--- a/iframe/teapot.html
+++ b/iframe/teapot.html
@@ -109,7 +109,7 @@
   </script>
 
   <body style='width:100%; height:100%; border:0; margin:0; padding:0; background: linear-gradient(Grey 0%, White 100%);'>
-    <x3d id='x3dElement' showStat='false' showLog='false' style='width:100%; height:100%; border:0' >
+    <x3d id='x3dElement' showStat='false' showLog='false' width="100%" height="100%">
         <scene DEF='scene'>
 			<viewpoint position="13.71854 10.00018 18.01263" orientation="-0.66475 0.73173 0.15059 0.81072"></viewpoint>
 
