--- a/index.html
+++ b/index.html
@@ -42,10 +42,16 @@
       <!-- Any section element inside of this container is displayed as a slide -->
       <div class="slides">
         <section>
-          <h1>SceGraToo</h1>
-          <h3>Web-based 3D-scene composition for further server-sided processing in the Roundtrip3D project</h3>
+          <h1>Bachelorarbeit</h1>
+          <h3>Ein Web-basiertes Werkzeug zur Komposition von 3D-Szenen innerhalb eines Roundtrop Engineering Frameworks</h3>
           <p>
             <small>Created by <a href="https://github.com/despairblue">Danny Arnold</a></small>
+          </p>
+          <p>
+            <small>Betreuer: Prof. Bernhard Jung</small>
+          </p>
+          <p>
+            <small>Gutachter: Matthias Lenk</small>
           </p>
         </section>
 
@@ -294,22 +300,22 @@
         <section>
           <h2>Motiviation</h2>
           <ul>
-            <li>3D Editor</li>
+            <li>3D-Editor</li>
             <li>JavaScript Editor</li>
             <ul>
-              <li>JavaScript exekution</li>
+              <li>JavaScript Ausführung</li>
             </ul>
-            <li>Eclipse Connection</li>
+            <li>Eclipse Anbindung</li>
             <ul>
               <li>Transformationen anstoßen</li>
-              <li>Screenshots der SSSIML-Diagramme anfertigen</li>
+              <li>Screenshots der SSIML-Diagramme anfertigen</li>
             </ul>
           </ul>
         </section>
 
         <section>
           <section>
-            <h2>Verwandte Arbeit</h2>
+            <h2>Verbundene Arbeiten</h2>
 
             <ol>
               <li>3D Meteor</li>
@@ -482,7 +488,7 @@
         </section>
 
         <section>
-          <h2>Concept</h2>
+          <h2>Konzept</h2>
 
           <iframe data-src="https://knsv.github.io/mermaid/live_editor/#/view/c2VxdWVuY2VEaWFncmFtClVzZXItPj4gQnJvd3NlcjogT3BlbiBXZWJwYWdlCkJyb3dzZXItPj4gU2VydmVyOiBHRVQgUHJvamVjdHMKU2VydmVyLT4-IEJyb3dzZXI6IFJldHVybiBQcm9qZWN0IExpc3QKVXNlci0-PiBCcm93c2VyOiBDaG9vc2UgUHJvamVjdApCcm93c2VyLT4-IFNlcnZlcjogUmV0cmlldmUgaW5kZXgueDNkCkJyb3dzZXItPj4gQnJvd3NlcjogRXZhbHVhdGUgU2NlbmUgKGZpbmQgSW5saW5lcykKQnJvd3Nlci0-PiBTZXJ2ZXI6IEdFVCBJbmxpbmVzClNlcnZlci0-PiBCcm93c2VyOiBSZXR1cm4gSW5saW5lcwpCcm93c2VyLT4-IEJyb3dzZXI6IEV2YWx1YXRlIElubGluZXMKVXNlci0-PiBCcm93c2VyOiBDaGFuZ2UgU2NlbmUKVXNlci0-PiBCcm93c2VyOiBTeW5jaHJvbmlzZSBTY2VuZSEKQnJvd3Nlci0-PiBTZXJ2ZXI6IFBPU1QgU2NlbmUKU2VydmVyLT4-IEJyb3dzZXI6IFNjZW5lIFN5bmNocm9uaXNlZCEKIyBBbHQgMQpVc2VyLT4-IEJyb3dzZXI6IFNhdmUgU2NlbmUhCkJyb3dzZXItPj4gVXNlcjogU2hvdyBTYXZlZGlhbG9n" width="600" height="400" alt="Client ↔️ Server Diagram"></iframe>
 
