--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
 
           <section>
             <img src="images/r3d.png" alt="" />
+            <p>
+              <small>TODO: zitieren</small>
+            </p>
             <aside class="notes">
               R3D-Entwicklungsprozess
             </aside>
@@ -403,20 +406,21 @@
           <section>
             <h2>ParaViewWeb</h2>
 
-            <p>Erfüllte Anforderungen</p>
+            <div style="text-align:left">
+              <p>Erfüllte Anforderungen</p>
 
-            <ul>
-              <li class="fragment">X3D Export</li>
-              <li class="fragment"></li>
-            </ul>
+              <ul>
+                <li class="fragment">X3D Export</li>
+              </ul>
 
-            <p> Defizite </p>
+              <p class="fragment"> Defizite </p>
 
-            <ul>
-              <li class="fragment">Visualization-Pipeline</li>
-              <li class="fragment">Kann X3D nicht importieren, nur VRML</li>
-              <li class="fragment">Kann es aber exportieren</li>
-            </ul>
+              <ul>
+                <li class="fragment">Visualization-Pipeline</li>
+                <li class="fragment">Kann X3D nicht importieren, nur VRML</li>
+                <li class="fragment">Kann es aber exportieren</li>
+              </ul>
+            </div>
             <aside class="notes">
               Ermöglicht es eine in paraview gerenderte szene im browser zu embedden.
               <ul>
@@ -429,8 +433,16 @@
           <section>
             <h2>3D Meteor</h2>
 
-            <iframe data-src="https://3d.meteor.com/#scene/eqsdtRNZFaTPesL5x" width="600" height="400" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:3px solid #666; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe>
+            <iframe
+              data-src="https://3d.meteor.com/#scene/eqsdtRNZFaTPesL5x"
+              style="width:60vw; height:60vh"
+              >
+            </iframe>
             <!-- <img data-src="images/3dmeteor.png" alt="Screenshot um sicher zu sein." /> -->
+
+            <p>
+              <small>https://3d.meteor.com</small>
+            </p>
 
             <aside class="notes">
               <ul>
@@ -442,9 +454,17 @@
           </section>
 
           <section>
-            <h2>Collaborative Working with Blender</h2>
+            <h3>Collaborative Working with Blender</h3>
 
-            <img src="images/blender.png" alt="Coords" />
+            <img
+              src="images/blender.png"
+              alt="Coords"
+              style="height:60vh"
+              />
+
+            <p>
+              <small>Martin Lesage, Martin Lesage, Gilles Raîche. A Blender Plugin for Collaborative Work on the Articiel Platform.</small>
+            </p>
 
             <aside class="notes">
               <ol>
@@ -491,7 +511,15 @@
           <section>
             <h2>Component Editor</h2>
 
-            <img data-src="images/robot.png" alt="" />
+            <img
+              data-src="images/robot.png"
+              alt=""
+              style="height:60vh"
+              />
+
+              <p>
+                <small>https://github.com/x3dom/component-editor</small>
+              </p>
 
           </section>
 
