--- a/index.html
+++ b/index.html
@@ -389,10 +389,9 @@
               style="width:60vw; height:60vh"
               >
             </iframe>
-            <!-- <img data-src="images/3dmeteor.png" alt="Screenshot um sicher zu sein." /> -->
 
             <p>
-              <small>https://3d.meteor.com</small>
+              <small><a href="https://3d.meteor.com">https://3d.meteor.com</a></small>
             </p>
 
             <aside class="notes">
@@ -402,6 +401,30 @@
                 <li>Kein X3D im/export</li>
               </ul>
             </aside>
+          </section>
+
+          <section>
+            <h2>3D Meteor</h2>
+
+            <img data-src="images/3dmeteor.png" alt="Screenshot um sicher zu sein." />
+
+            <p>
+              <small><a href="https://3d.meteor.com">https://3d.meteor.com</a></small>
+            </p>
+          </section>
+
+          <section>
+            <h2>3D Meteor</h2>
+
+            <p>
+              Defizite
+
+              <ul>
+                <li>Nur Würfel</li>
+                <li>Keine Transformationen</li>
+                <li>Kein X3D im/export</li>
+              </ul>
+            </p>
           </section>
         </section>
 
@@ -455,6 +478,24 @@
               <ul>
                 <li>poligone sind durchnumeriert</li>
                 <li>vektor der die verschiebung beschreibt</li>
+              </ul>
+            </aside>
+          </section>
+
+          <section>
+            <h2>Colaborative Working with Blender</h2>
+
+            <p>
+              Defizite
+
+              <ul>
+                <li>Verschiebung auf Poligonebene.</li>
+                <li>Blenders im-/export Skripte sind verlustbehaftet.</li>
+              </ul>
+            </p>
+
+            <aside class="notes">
+              <ul>
                 <li>verschiebung erfolgt auf poligon ebene, nicht auf scenengraph ebene</li>
                 <li>blenders import/export skripte sind verlustbehaftet</li>
               </ul>
@@ -466,6 +507,16 @@
           <section>
             <h2>Component Editor</h2>
 
+            <iframe src="http://examples.x3dom.org/editor/component_editor/" style="width:60vw; height:60vh"></iframe>
+
+              <p>
+                <small><a href="http://examples.x3dom.org/editor/component_editor/">http://examples.x3dom.org/editor/component_editor/</a></small>
+              </p>
+          </section>
+
+          <section>
+            <h2>Component Editor</h2>
+
             <img
               data-src="images/robot.png"
               alt=""
@@ -474,16 +525,6 @@
 
               <p>
                 <small><a href="https://github.com/x3dom/component-editor">https://github.com/x3dom/component-editor</a></small>
-              </p>
-          </section>
-
-          <section>
-            <h2>Component Editor</h2>
-
-            <iframe src="http://examples.x3dom.org/editor/component_editor/" style="width:60vw; height:60vh"></iframe>
-
-              <p>
-                <small><a href="http://examples.x3dom.org/editor/component_editor/">http://examples.x3dom.org/editor/component_editor/</a></small>
               </p>
           </section>
 
